# PyC

./: .clang-format  .gitignore  .gitpod.dockerfile  .gitpod.premake5.lua  .gitpod.run.sh  .gitpod.yml  CMakeLists.txt  LICENSE  README.md  premake5.lua  run.sh  setup.py
.github/: build.sh  setup.py  test.sh
.github/workflows/: build_and_test.yml
examples/: c_raylib.h  main.c  main.h  main.py
meta/: CppTypeInfo.c  CppTypeInfo.h  helper.c
src/: CppTypeInfo.c  CppTypeInfo.h  CppWrapper_PyTypes.c  DS.h  DataStructure.c  DataStructures.h  PyC.c  PyC.h  Py_C_Types.c  Py_C_Types.h  TypeConversions.c  binding.cpp  binding.hpp  parse.cpp
tests/: helper.py  test.py  test_c_structs.py  test_c_types.py  test_c_unions.py  test_functions.py  test_globals.py  test_old.py
tests/c/: module.c  module.cpp  module.h  module.hpp
